--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,14 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>Demo Console CRUD</name>
-    <!--    <url>http://console-crud.pichugin.kz</url>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <mysql.connector.version>8.0.29</mysql.connector.version>
+        <liquibase-maven-plugin-version>4.11.0</liquibase-maven-plugin-version>
+        <maven-compiler-plugin-version>3.10.1</maven-compiler-plugin-version>
+        <junit-version>4.13.2</junit-version>
+        <mockito-verion>1.10.19</mockito-verion>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <profile.changeLogFile>src/main/resources/changelog.xml</profile.changeLogFile>
@@ -20,34 +24,30 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>1.10.19</version>
+            <version>${mockito-verion}</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.29</version>
+            <version>${mysql.connector.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-            <version>4.11.0</version>
+            <version>${liquibase-maven-plugin-version}</version>
         </dependency>
     </dependencies>
 
@@ -56,12 +56,21 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>4.11.0</version>
+                <version>${liquibase-maven-plugin-version}</version>
                 <configuration>
                     <propertyFile>${profile.propertyFile}</propertyFile>
                     <changeLogFile>${profile.changeLogFile}</changeLogFile>
                     <dataDir>src/main/resources</dataDir>
                     <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin-version}</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
         </plugins>
