--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <mysql.connector.version>8.0.29</mysql.connector.version>
         <liquibase-maven-plugin-version>4.11.0</liquibase-maven-plugin-version>
         <maven-compiler-plugin-version>3.10.1</maven-compiler-plugin-version>
-        <junit-version>4.13.2</junit-version>
+        <junit-version>5.8.2</junit-version>
         <mockito-verion>1.10.19</mockito-verion>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -25,8 +25,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit-version}</version>
             <scope>test</scope>
         </dependency>
